# cc8-emulator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cc8_emulator/: main.py
src/cc8_emulator/core/: bus.py  console.py  cpu.py  memory.py  ppu.py
src/cc8_emulator/data/: characters.py
src/cc8_emulator/input/: keyboard.py  keys.py
src/cc8_emulator/rom/: load_rom.py
src/cc8_emulator/video/: renderer.py
