[project]
name = "cc8-emulator"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Andrade",email = "ricardo.maia12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "cc8_emulator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
