[project]
name = "cc8-emulator"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Andrade",email = "ricardo.maia12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cc8_emulator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "cc8_emulator.core.componetsTests:main"